syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message SumRequest {
    int32 first_num =1;
    int32 second_num=2;
}

message SumResonse {
    int32 sum_result = 1;
}


message PrimeNumberRequest {
    int64 number = 1;
}

message PrimeNumberResponse {
    int64 prime_factor = 1;
}

service CalculatorService{
    // unary
    rpc Sum (SumRequest) returns(SumResonse) {}; 

    // Server Streaming
    rpc PrimeNumber(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};
}